Revision history for Perl extension Bundle::Theory.

1.03
      - Changed from nonexistent Test::Coverage to the correct name,
        Test::Pod::Coverage.
      - Changed from nonexistent Net::FTP::Server to the correct name,
        Net::FTPServer.
      - Removed IO::Socket::SSL for now, since its tests fail.
      - Added Want.
      - Added Parse::RecDescent.
      - Added JSON and JSON::XS.

1.02  2008-02-05 00:07:25
      - Added `t/basic.t` so that it would actually be distributed. Duh.

1.01  2008-02-04 22:08:44
      - Added `t/basic.t`, which just makes sure the bundle module loads, so
        that there is at least one test for the distribution. This will
        eliminate those "UNKNOWN" test retults from cpan-testers.
      - Changed the "CONTENTS" header to uppercase to make `CPAN.pm` happy.
      - Added Module::Install.
      - Added CPAN::SQLite.

1.00  2008-02-03 01:59:58
      - Initial public release.