@@ -6,9 +6,17 @@ Revision history for Perl extension Bundle::Theory.
       - Changed from nonexistent Net::FTP::Server to the correct name,
         Net::FTPServer.
       - Removed IO::Socket::SSL for now, since its tests fail.
-      - Added Want.
-      - Added Parse::RecDescent.
-      - Added JSON and JSON::XS.
+      - Added:
+        + Want
+        + Parse::RecDescent
+        + JSON and JSON::XS
+        + App::Ack
+        + Modul::CoreList
+        + PPI
+        + Perl::Tidy
+        + Scalar::Util
+        + Text::Markdown
+        + Text::MultiMarkdown
 
 1.02  2008-02-05 00:07:25
       - Added `t/basic.t` so that it would actually be distributed. Duh.
